fix: overlay is not visible in Reddit

--- a/src/contentscript/overlay/root/overlayManager.css
+++ b/src/contentscript/overlay/root/overlayManager.css
@@ -19,6 +19,8 @@
   font-size: 14px;
   line-height: 20px;
 
+  /* Fixes visibility in Reddit */
+  visibility: visible !important;
   background: #fff;
   border: 0;
 
